src/objects/Home__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HTML_Content_Id__c</fullName>
        <label>HTML Content Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Title__c</fullName>
        <label>Page Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <label>Sequence No</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Customer Portal Home</label>
</CustomObject>